# Nullscape

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  vcpkg.json
Game/: CMakeLists.txt
Game/cmake/: FindGenesis.cmake
Game/src/: .clang-format  achievements.cpp  achievements.h  blackboard.cpp  blackboard.h  drawutils.cpp  drawutils.h  game.hpp  gameevents.cpp  gameevents.h  globals.h  hexterminate.h  jsonserialization.hpp  main.cpp  perks.cpp  perks.h  player.cpp  player.h  savegameheader.cpp  savegameheader.h  savegamestorage.cpp  savegamestorage.h  serialisable.h  shadertweaks.cpp  shadertweaks.h  stringaux.cpp  stringaux.h  ui2.cpp  ui2.hpp  xmlaux.cpp  xmlaux.h
Game/src/ammo/: ammo.cpp  ammo.h  ammomanager.cpp  ammomanager.h  antiproton.cpp  antiproton.h  beam.cpp  beam.h  lance.cpp  lance.h  missile.cpp  missile.h  projectile.cpp  projectile.h  rocket.cpp  rocket.h  torpedo.cpp  torpedo.h
Game/src/components/: anchorcomponent.cpp  anchorcomponent.h  arbiterreinforcementcomponent.cpp  arbiterreinforcementcomponent.h  chrysamereswarmcomponent.cpp  chrysamereswarmcomponent.h  cradlecomponent.cpp  cradlecomponent.h  finalchrysamerecomponent.cpp  finalchrysamerecomponent.h  homeworldcomponent.cpp  homeworldcomponent.h  reinforcementscomponent.cpp  reinforcementscomponent.h  shieldinhibitorcomponent.cpp  shieldinhibitorcomponent.h
Game/src/entity/: component.cpp  component.hpp  componentfactory.cpp  componentfactory.hpp  componentserialization.hpp  componenttype.hpp  entity.cpp  entity.hpp  entityfactory.cpp  entityfactory.hpp  entitytemplateeditor.cpp  entitytemplateeditor.hpp
Game/src/faction/: empirefaction.cpp  empirefaction.h  faction.cpp  faction.h  irianifaction.cpp  irianifaction.h  neutralfaction.cpp  neutralfaction.h  piratefaction.cpp  piratefaction.h
Game/src/fleet/: fleet.cpp  fleet.fwd.h  fleet.h  fleet.hpp  fleetbehaviour.cpp  fleetbehaviour.h  fleetcommand.cpp  fleetcommand.h  fleetdoctrine.cpp  fleetdoctrine.h  fleetrep.cpp  fleetrep.h  fleetspawner.cpp  fleetspawner.h
Game/src/hyperscape/: hyperscape.cpp  hyperscape.h  hyperscapelocation.cpp  hyperscapelocation.h  hyperscaperep.cpp  hyperscaperep.h  resources.cpp  resources.h  silverthread.cpp  silverthread.h  silverthreadrep.cpp  silverthreadrep.h  starfield.cpp  starfield.h  starfieldentry.h  starfieldrep.cpp  starfieldrep.h
Game/src/laser/: laser.h  lasermanager.cpp  lasermanager.h
Game/src/loot/: lootprobability.cpp  lootprobability.h
Game/src/menus/: audiodebug.cpp  audiodebug.h  buttonevent.cpp  buttonevent.h  codexwindow.cpp  codexwindow.h  console.cpp  console.h  contextualtips.cpp  contextualtips.h  creditswindow.cpp  creditswindow.h  cursortype.h  deathmenu.cpp  deathmenu.h  detailswindow.cpp  detailswindow.h  endgamewindow.cpp  endgamewindow.h  eva.cpp  eva.h  fleetstatus.cpp  fleetstatus.h  fleetwindow.cpp  fleetwindow.h  galaxywindow.cpp  galaxywindow.h  hotbar.cpp  hotbar.h  hyperspacemenu.cpp  hyperspacemenu.h  intelwindow.cpp  intelwindow.h  loadgamewindow.cpp  loadgamewindow.h  loadingscreen.cpp  loadingscreen.h  lootwindow.cpp  lootwindow.h  mainmenu.cpp  (+36 more)
Game/src/misc/: gui.cpp  gui.h  mathaux.h  random.cpp  random.h  randomshuffle.cpp  randomshuffle.h
Game/src/muzzleflash/: muzzleflashdata.h  muzzleflashmanager.cpp  muzzleflashmanager.h  muzzleflashmanagerrep.cpp  muzzleflashmanagerrep.h
Game/src/particles/: particle.cpp  particle.h  particleemitter.cpp  particleemitter.h  particlemanager.cpp  particlemanager.h  particlemanagerrep.cpp  particlemanagerrep.h  particlepass.cpp  particlepass.h
Game/src/requests/: arbiterrequest.cpp  arbiterrequest.h  arbiterrequestinfo.cpp  arbiterrequestinfo.h  campaignrequest.cpp  campaignrequest.h  campaignrequestinfo.cpp  campaignrequestinfo.h  campaigntags.h  defendrequest.cpp  defendrequest.h  defendrequestinfo.cpp  defendrequestinfo.h  expandrequest.cpp  expandrequest.h  expandrequestinfo.cpp  expandrequestinfo.h  imperialrequest.cpp  imperialrequest.fwd.h  imperialrequest.h  imperialrequestinfo.cpp  imperialrequestinfo.h  infinitewarrequest.cpp  infinitewarrequest.h  infinitewarrequestinfo.cpp  infinitewarrequestinfo.h  invasionrequest.cpp  invasionrequest.h  invasionrequestinfo.cpp  invasionrequestinfo.h  requestgoal.cpp  requestgoal.h  requestgoalrep.cpp  requestgoalrep.fwd.h  requestgoalrep.h  requestmanager.cpp  requestmanager.h  strongholdrequest.cpp  strongholdrequest.h  strongholdrequestinfo.cpp  (+1 more)
Game/src/sector/: background.cpp  background.h  backgroundinfo.h  battlecontroller.cpp  battlecontroller.hpp  battlecontrollerevents.cpp  battlecontrollerevents.hpp  boundary.cpp  boundary.h  dust.cpp  dust.h  fogofwar.cpp  fogofwar.h  galaxy.cpp  galaxy.h  galaxycreationinfo.cpp  galaxycreationinfo.h  galaxygenerator.cpp  galaxygenerator.h  galaxyrep.cpp  galaxyrep.h  hyperspaceexitpoint.h  sector.cpp  sector.h  sectorcamera.cpp  sectorcamera.h  sectorinfo.cpp  sectorinfo.h  splitrenderer.cpp  splitrenderer.hpp  starinfo.cpp  starinfo.h
Game/src/ship/: collisionmasks.h  damagetracker.cpp  damagetracker.h  destructionsequence.cpp  destructionsequence.h  hexgrid.cpp  hexgrid.h  hyperspacecore.cpp  hyperspacecore.h  hyperspacegate.cpp  hyperspacegate.h  inventory.cpp  inventory.h  module.cpp  module.h  moduleinfo.cpp  moduleinfo.h  shield.cpp  shield.h  shieldhitregistry.cpp  shieldhitregistry.h  ship.cpp  (+12 more)
Genesis/: CMakeLists.txt
Genesis/src/: .clang-format  beginexternalheaders.h  colour.h  component.h  configuration.cpp  configuration.h  coredefines.h  eventhandler.cpp  eventhandler.h  filename.cpp  filename.h  genesis.cpp  genesis.h  inputmanager.cpp  inputmanager.h  logger.cpp  logger.h  rendersystem.cpp  rendersystem.fwd.h  rendersystem.h  resourcemanager.cpp  resourcemanager.h  shader.cpp  shader.h  shadercache.cpp  shadercache.h  shaderuniform.cpp  shaderuniform.h  shaderuniforminstance.cpp  shaderuniforminstance.h  shaderuniformtype.h  taskmanager.cpp  taskmanager.h  timer.cpp  vertexbuffer.cpp  vertexbuffer.h  videoplayer.cpp  videoplayer.h  window.cpp  window.h  (+2 more)
Genesis/tools/: CMakeLists.txt
(+400 files in other folders)
